--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AlgorithmCompare C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(AlgorithmCompare main.c avlTree.c avlTree.h)
+add_executable(AlgorithmCompare main.c avlTree.c avlTree.h hashTchaining.c hashTchaining.h)
